--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Calendar</h1>
+  <body class="page__body">
+    <div class="page__calendar">
+      <article
+        class="calendar
+          calendar--month-length--31
+          calendar--start-day--wed"
+      >
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+        <a href="#" class="calendar__day"></a>
+      </article>
+    </div>
   </body>
 </html>
