--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
   <body>
-    <main>
+    <main class="main">
       <ul class="calendar calendar--start-day--sun calendar--month-length--29">
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
