--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,42 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="calendar">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
+    <div class="wrap">
+      <div class="calendar-wrapper">
+        <div class="calendar">
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+          <div class="calendar__day"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
