--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-length-29 start-mon">
+    <div class="calendar calendar--month-length-29 calendar--start-mon">
       <div class="calendar__number"></div>
       <div class="calendar__number"></div>
       <div class="calendar__number"></div>
