--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <article class="page__body">
-    <div class="calendar calendar--start-day--mon calendar--month-length--31">
+  <body>
+    <article class="calendar calendar--start-day--mon calendar--month-length--31">
       <div class="calendar__day calendar__day--1"></div>
       <div class="calendar__day calendar__day--2"></div>
       <div class="calendar__day calendar__day--3"></div>
@@ -39,6 +39,7 @@
       <div class="calendar__day calendar__day--29"></div>
       <div class="calendar__day calendar__day--30"></div>
       <div class="calendar__day calendar__day--31"></div>
-    </div>
-  </article>
+    </article>
+  </body>
 </html>
+
