improved transition param, deleted height prop for calendar, add variables, removed border box for all elements

--- a/src/index.html
+++ b/src/index.html
@@ -8,43 +8,44 @@
   </head>
   <body class="page__body">
     <div class="page__calendar">
-      <article
+      <ul
         class="calendar
+          calendar--no-indentations
           calendar--month-length--31
-          calendar--start-day--wed"
+          calendar--start-day--mon"
       >
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-        <a href="#" class="calendar__day"></a>
-      </article>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+        <li href="#" class="calendar__day"></li>
+      </ul>
     </div>
   </body>
 </html>
