--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
+    <!-- calendar -->
     <div class="calendar calendar--start-thu calendar--month-length-29">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
