3. delete empty lines in variables.cscc

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar-block calendar-block--start-day">
+    <div class="calendar-block calendar-block--start-tue calendar-block--feb">
       <div class="calendar-block__day"></div>
       <div class="calendar-block__day"></div>
       <div class="calendar-block__day"></div>
