--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="mounth mounth--apr mounth--start-sun">
+      <div class="mounth mounth--length-29 mounth--start-tue">
         <div class="mounth__day"></div>
         <div class="mounth__day"></div>
         <div class="mounth__day"></div>
