removed extra empty lines, removed href atribute from li

--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
           calendar--month-length--31
           calendar--start-day--mon"
       >
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
-        <li href="#" class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
       </ul>
     </div>
   </body>
