--- a/src/index.html
+++ b/src/index.html
@@ -7,42 +7,42 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div
+    <ul
       class="calendar
       calendar--month-length-29
       calendar--start-sun"
     >
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-      <div class="calendar__number"></div>
-    </div>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+      <li class="calendar__number"></li>
+    </ul>
   </body>
 </html>
