--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,38 @@
     <link rel="stylesheet" href="main.scss">
   </head>
   <body>
-    <div class="container">
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-
-    </div>
+    <ul class="list">
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+      <li class="list__cell"></li>
+    </ul>
   </body>
 </html>
