--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day--wed calendar--month-length-30">
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
-      <div class="calendar__cell"></div>
+    <div class="calendar calendar--start-sun calendar--month-29">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
