Rewrote all the code to understand what was wrong

--- a/src/index.html
+++ b/src/index.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <link rel="stylesheet" href="main.scss">
+    <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <ul class="list">
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-      <li class="list__cell"></li>
-    </ul>
+    <div class="calendar calendar--start-fri calendar--month-length-28">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+    </div>
   </body>
 </html>
