--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+
+    <ul class="calendar">
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+      <li class="day"></li>
+    </ul>
   </body>
 </html>
