--- a/src/index.html
+++ b/src/index.html
@@ -2,49 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <link rel="stylesheet"
-          href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-
-    <section class="calendar">
-      <ul class="calendar__list">
-        <li class="calendar__item calendar__item--1"></li>
-        <li class="calendar__item calendar__item--2"></li>
-        <li class="calendar__item calendar__item--3"></li>
-        <li class="calendar__item calendar__item--4"></li>
-        <li class="calendar__item calendar__item--5"></li>
-        <li class="calendar__item calendar__item--6"></li>
-        <li class="calendar__item calendar__item--7"></li>
-        <li class="calendar__item calendar__item--8"></li>
-        <li class="calendar__item calendar__item--9"></li>
-        <li class="calendar__item calendar__item--10"></li>
-        <li class="calendar__item calendar__item--11"></li>
-        <li class="calendar__item calendar__item--12"></li>
-        <li class="calendar__item calendar__item--13"></li>
-        <li class="calendar__item calendar__item--14"></li>
-        <li class="calendar__item calendar__item--15"></li>
-        <li class="calendar__item calendar__item--16"></li>
-        <li class="calendar__item calendar__item--17"></li>
-        <li class="calendar__item calendar__item--18"></li>
-        <li class="calendar__item calendar__item--19"></li>
-        <li class="calendar__item calendar__item--20"></li>
-        <li class="calendar__item calendar__item--21"></li>
-        <li class="calendar__item calendar__item--22"></li>
-        <li class="calendar__item calendar__item--23"></li>
-        <li class="calendar__item calendar__item--24"></li>
-        <li class="calendar__item calendar__item--25"></li>
-        <li class="calendar__item calendar__item--26"></li>
-        <li class="calendar__item calendar__item--27"></li>
-        <li class="calendar__item calendar__item--28"></li>
-        <li class="calendar__item calendar__item--29"></li>
-        <li class="calendar__item calendar__item--30"></li>
-        <li class="calendar__item calendar__item--31"></li>
-
-      </ul>
+    <section class="calendar calendar--29">
+      <div
+        class="calendar__item
+        calendar__item--1
+        calendar__item--sun"
+      >
+      </div>
+      <div class="calendar__item calendar__item--2"></div>
+      <div class="calendar__item calendar__item--3"></div>
+      <div class="calendar__item calendar__item--4"></div>
+      <div class="calendar__item calendar__item--5"></div>
+      <div class="calendar__item calendar__item--6"></div>
+      <div class="calendar__item calendar__item--7"></div>
+      <div class="calendar__item calendar__item--8"></div>
+      <div class="calendar__item calendar__item--9"></div>
+      <div class="calendar__item calendar__item--10"></div>
+      <div class="calendar__item calendar__item--11"></div>
+      <div class="calendar__item calendar__item--12"></div>
+      <div class="calendar__item calendar__item--13"></div>
+      <div class="calendar__item calendar__item--14"></div>
+      <div class="calendar__item calendar__item--15"></div>
+      <div class="calendar__item calendar__item--16"></div>
+      <div class="calendar__item calendar__item--17"></div>
+      <div class="calendar__item calendar__item--18"></div>
+      <div class="calendar__item calendar__item--19"></div>
+      <div class="calendar__item calendar__item--20"></div>
+      <div class="calendar__item calendar__item--21"></div>
+      <div class="calendar__item calendar__item--22"></div>
+      <div class="calendar__item calendar__item--23"></div>
+      <div class="calendar__item calendar__item--24"></div>
+      <div class="calendar__item calendar__item--25"></div>
+      <div class="calendar__item calendar__item--26"></div>
+      <div class="calendar__item calendar__item--27"></div>
+      <div class="calendar__item calendar__item--28"></div>
+      <div class="calendar__item calendar__item--29"></div>
+      <div class="calendar__item calendar__item--30"></div>
+      <div class="calendar__item calendar__item--31"></div>
     </section>
   </body>
 </html>
