--- a/src/index.html
+++ b/src/index.html
@@ -2,48 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet"
+          href="./styles/main.scss">
   </head>
   <body>
-    <section class="calendar calendar--29">
-      <div
-        class="calendar__item
-        calendar__item--1
-        calendar__item--sun"
-      >
-      </div>
-      <div class="calendar__item calendar__item--2"></div>
-      <div class="calendar__item calendar__item--3"></div>
-      <div class="calendar__item calendar__item--4"></div>
-      <div class="calendar__item calendar__item--5"></div>
-      <div class="calendar__item calendar__item--6"></div>
-      <div class="calendar__item calendar__item--7"></div>
-      <div class="calendar__item calendar__item--8"></div>
-      <div class="calendar__item calendar__item--9"></div>
-      <div class="calendar__item calendar__item--10"></div>
-      <div class="calendar__item calendar__item--11"></div>
-      <div class="calendar__item calendar__item--12"></div>
-      <div class="calendar__item calendar__item--13"></div>
-      <div class="calendar__item calendar__item--14"></div>
-      <div class="calendar__item calendar__item--15"></div>
-      <div class="calendar__item calendar__item--16"></div>
-      <div class="calendar__item calendar__item--17"></div>
-      <div class="calendar__item calendar__item--18"></div>
-      <div class="calendar__item calendar__item--19"></div>
-      <div class="calendar__item calendar__item--20"></div>
-      <div class="calendar__item calendar__item--21"></div>
-      <div class="calendar__item calendar__item--22"></div>
-      <div class="calendar__item calendar__item--23"></div>
-      <div class="calendar__item calendar__item--24"></div>
-      <div class="calendar__item calendar__item--25"></div>
-      <div class="calendar__item calendar__item--26"></div>
-      <div class="calendar__item calendar__item--27"></div>
-      <div class="calendar__item calendar__item--28"></div>
-      <div class="calendar__item calendar__item--29"></div>
-      <div class="calendar__item calendar__item--30"></div>
-      <div class="calendar__item calendar__item--31"></div>
+    <section class="calendar
+    calendar__start-day--tue
+    calendar__month-length--29">
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
+      <div class="calendar__item"></div>
     </section>
   </body>
 </html>
