--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--31">
+      <div class="calendar__dey calendar__dey--thu"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+      <div class="calendar__dey"></div>
+    </div>
   </body>
 </html>
