--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--31">
-      <div class="calendar__dey calendar__dey--thu"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
-      <div class="calendar__dey"></div>
+    <div class="calendar calendar--30 ">
+      <div class="calendar__day calendar__day--thu"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
