--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--30 ">
-      <div class="calendar__day calendar__day--thu"></div>
+    <div class="calendar calendar--30 calendar--tue">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
