--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day start"></div>
+    <div class="calendar calendar__month--length">
+      <div class="calendar__day calendar__day--start"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
