--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calendar-container">
-      <div class="calendar calendar-grid start-day--sun month-length--29">
+      <div class="calendar calendar-start-day--sun calendar-month-length--29">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
