--- a/src/index.html
+++ b/src/index.html
@@ -6,37 +6,43 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="calendar calendar--start-day--mon calendar--month-length--31">
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
-    <div class="calendar__day"></div>
+  <body class="calendar">
+    <div class=
+      "calendar__field
+      calendar__field--start-day--fri
+      calendar__field--month-length--31"
+    >
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+    </div>
   </body>
 </html>
