--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="calendar">
-    <div class=
-      "calendar__field
-      calendar__field--start-day--fri
-      calendar__field--month-length--31"
+    <div class="calendar__field calendar__field--start-day--fri calendar__field--month-length--31"
     >
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
