--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
+
+    <h1 class="title">Calendar</h1>
+
     <div class="calendar calendar--month-length-31 calendar--start-day-sun">
 
       <div class="calendar__day"></div>
