--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
   <body>
 
     <ul class="calendar">
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
+      <li class="day calendar__mon"></li>
+      <li class="day calendar__tue"></li>
+      <li class="day calendar__wed"></li>
+      <li class="day calendar__thu"></li>
+      <li class="day calendar__fri"></li>
+      <li class="day calendar__sat"></li>
+      <li class="day calendar__sun"></li>
       <li class="day"></li>
       <li class="day"></li>
       <li class="day"></li>
