--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,38 @@
   </head>
   <body>
     <h1>Calendar</h1>
+    <div class="calender calender--start-mon calender--month-length-31">
+      <div class="calender__date calender__date--1"></div>
+      <div class="calender__date calender__date--2"></div>
+      <div class="calender__date calender__date--3"></div>
+      <div class="calender__date calender__date--4"></div>
+      <div class="calender__date calender__date--5"></div>
+      <div class="calender__date calender__date--6"></div>
+      <div class="calender__date calender__date--7"></div>
+      <div class="calender__date calender__date--8"></div>
+      <div class="calender__date calender__date--9"></div>
+      <div class="calender__date calender__date--10"></div>
+      <div class="calender__date calender__date--11"></div>
+      <div class="calender__date calender__date--12"></div>
+      <div class="calender__date calender__date--13"></div>
+      <div class="calender__date calender__date--14"></div>
+      <div class="calender__date calender__date--15"></div>
+      <div class="calender__date calender__date--16"></div>
+      <div class="calender__date calender__date--17"></div>
+      <div class="calender__date calender__date--18"></div>
+      <div class="calender__date calender__date--19"></div>
+      <div class="calender__date calender__date--20"></div>
+      <div class="calender__date calender__date--21"></div>
+      <div class="calender__date calender__date--22"></div>
+      <div class="calender__date calender__date--23"></div>
+      <div class="calender__date calender__date--24"></div>
+      <div class="calender__date calender__date--25"></div>
+      <div class="calender__date calender__date--26"></div>
+      <div class="calender__date calender__date--27"></div>
+      <div class="calender__date calender__date--28"></div>
+      <div class="calender__date calender__date--29"></div>
+      <div class="calender__date calender__date--30"></div>
+      <div class="calender__date calender__date--31"></div>
+    </div>
   </body>
 </html>
