--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="body">
-    <div
-      class="calendar  calendar--month-lenth-31 calendar--start-day-sun">
+    <div class="calendar  calendar--month-lenth-29 calendar--start-day-sun">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
