add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,40 @@
   </head>
   <body>
     <div class="calendar">
-      <div class="calendar__day">
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
-        <div class="calendar__days"></div>
+      <div class="calendar__days calendar--start-day-sun">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </div>
   </body>
 </html>
+
