--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,43 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
+    <div class="
+      calendar
+      calendar--month-length-31
+      calendar--start-day-sun
+      "
+    >
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
