Display a calendar in the middle of the screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
-  <body>
-    <article class="calendar calendar--start-day--sun calendar--month-length--31">
+  <body class="body">
+    <article class="calendar calendar--start-day-sun calendar--month-length-31 body__calendar">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
