add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,37 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar--month-length-29 calendar--start-day-mon">
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
-      <div class="calendar-cell"></div>
+    <div class="calendar calendar--start-day--mon calendar--month-length--29">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
   </div>
