add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,52 @@
   </head>
   <body>
     <h1>Calendar</h1>
+
+    <ul class="month
+    month--start-day-sun
+    month--month-length-31">
+
+      <!-- Week 1 -->
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+
+      <!-- Week 2 -->
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+
+      <!-- Week 3 -->
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+
+      <!-- Week 4 -->
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+
+      <!-- Week 5 -->
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+      <li class="month__day"></li>
+
+    </ul>
   </body>
 </html>
