add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
-
-    <ul class="month
-    month--start-day-sun
-    month--month-length-31">
-
-      <!-- Week 1 -->
+    <ul class="month month--start-day-sun month--month-length-31">
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
@@ -21,8 +15,6 @@
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
-
-      <!-- Week 2 -->
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
@@ -30,8 +22,6 @@
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
-
-      <!-- Week 3 -->
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
@@ -39,8 +29,6 @@
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
-
-      <!-- Week 4 -->
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
@@ -48,12 +36,9 @@
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
-
-      <!-- Week 5 -->
       <li class="month__day"></li>
       <li class="month__day"></li>
       <li class="month__day"></li>
-
     </ul>
   </body>
 </html>
