moved variables to separate file and other fixes

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
-  <body class="calendar calendar---start-day-mon calendar---length-31">
+  <body class="calendar calendar--start-day--mon calendar--length--31">
     <div class="calendar__day"></div>
     <div class="calendar__day"></div>
     <div class="calendar__day"></div>
